CORD-1289 event step demo
Change-Id: If0730e95be34658a0c3e1618568c5d06165e15e1

--- a/xos/synchronizer/simpleexampleservice_config.yaml
+++ b/xos/synchronizer/simpleexampleservice_config.yaml
@@ -30,6 +30,7 @@ required_models:
   - KubernetesSecretVolumeMount
 dependency_graph: "/opt/xos/synchronizers/simpleexampleservice/model-deps"
 steps_dir: "/opt/xos/synchronizers/simpleexampleservice/steps"
+event_steps_dir: "/opt/xos/synchronizers/simpleexampleservice/event_steps"
 sys_dir: "/opt/xos/synchronizers/simpleexampleservice/sys"
 model_policies_dir: "/opt/xos/synchronizers/simpleexampleservice/model_policies"
 models_dir: "/opt/xos/synchronizers/simpleexampleservice/models"
