[SEBA-494] Setting required core version
Change-Id: Ifae6ed2e722fb874bd57e02c76e3821d30da879e

--- a/Dockerfile.synchronizer
+++ b/Dockerfile.synchronizer
@@ -12,9 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# docker build -t xosproject/simpleexampleservice-synchronizer:candidate -f Dockerfile.synchronizer .
+
 # xosproject/simpleexampleservice-synchronizer
 
-FROM xosproject/xos-synchronizer-base:2.1.54
+FROM xosproject/xos-synchronizer-base:2.2.1
 
 COPY xos/synchronizer /opt/xos/synchronizers/simpleexampleservice
 COPY VERSION /opt/xos/synchronizers/simpleexampleservice/
