--- a/xos/synchronizer/config.yaml
+++ b/xos/synchronizer/config.yaml
@@ -15,6 +15,7 @@
 
 
 name: simpleexampleservice
+core_version: ">=2.2.1"
 accessor:
   username: xosadmin@opencord.org
   password: "@/opt/xos/services/simpleexampleservice/credentials/xosadmin@opencord.org"
